# sta-pipeline

./: .gitignore  .pyproject.toml  LICENSE  README.md  boxsize_focus_dose_EMBL.xlsx  pyproject.toml  setup.py
analysis_scripts/: analyze_refinement.ipynb  color_palette.py  histogram_classes.ipynb  new_particle_context.ipynb  particle_box_sizes.ipynb  particle_context.ipynb  particle_context_bottom.ipynb  particle_context_top.ipynb  plot_relion_fsc.ipynb  plot_relion_fsc_b2LSUandFULL.ipynb  plot_relion_fsc_seaborn.ipynb  postprocess_star_to_csv.ipynb  ribosomes_tomo_thickness.ipynb  spline_surface.ipynb  spline_surface_alldata.ipynb  spline_surface_grid.ipynb  spline_surface_nogrid.ipynb  tomo_thicknesses_to_star.ipynb  uniprot.ipynb
bash_scripts/: link_select_ts_dirs.sh
chimerax_scripts/: chx-load_tomograms.py  chx-load_ts_particles.py  chx-map_rln_classes.py  load_class_mrcs.py  load_particle_lists.py  load_tomograms.py  map_relion_classes.ipynb  map_relion_classes.py  save_particles_lists.py  setup_cleaning.py  split_run_datastar.ipynb  swapz_particles.py
docs/: particle_cleaning.md
fidder/: fidder.sh
matlab_scripts/: create_mask.m  dtemplate_match.m  load_dynamo_tbls.m  load_tomo_info.m
notebooks/: browse_tomos.ipynb  convert_eman2_to_star.ipynb  ctf_modeling.ipynb  find_maxima copy.ipynb  find_maxima.ipynb  fix_rln_helix_interp.ipynb  fix_star2tbl_tomonames.ipynb  peak_extract_tests copy.ipynb  peak_pytrack_extract_tests.ipynb  prep_dynamo_star.ipynb  prep_relion_tomograms.ipynb  randomize_particle_orientation.ipynb  select_classes.ipynb  ts_003_peaks.star  (+1 more)
(+115 files in other folders)
